--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "start": "nodemon src/index"
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server": "^3.5.0",
+    "graphql": "^15.8.0"
+  },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.5.1"
   },
   "author": "Raphael Terrier @R4ph-t",
   "license": "MIT",
